// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateHeaderObject should translate to IHttpHeaderParam 1`] = `
Object {
  "allowEmptyValue": true,
  "allowReserved": true,
  "deprecated": true,
  "description": "descr",
  "encodings": Array [],
  "examples": Array [
    Object {
      "description": undefined,
      "key": "a",
      "value": "hey",
    },
    Object {
      "key": "__default",
      "value": Object {},
    },
  ],
  "explode": true,
  "name": "header-name",
  "required": true,
  "schema": Object {},
  "style": "matrix",
}
`;

exports[`translateMediaTypeObject given complex nested media type object should translate correctly 1`] = `
Object {
  "encodings": Array [
    Object {
      "contentType": "text/plain",
      "headers": Array [
        Object {
          "description": "descr",
          "encodings": Array [],
          "examples": Array [
            Object {
              "description": undefined,
              "key": "a",
              "value": "hey",
            },
          ],
          "name": "h1",
          "style": "matrix",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "key": "example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
  },
}
`;

exports[`translateMediaTypeObject given encoding with incorrect style should throw an error 1`] = `"Encoding property style: 'xyz' is incorrect, must be one of: form,spaceDelimited,pipeDelimited,deepObject"`;

exports[`translateMediaTypeObject given encodings should translate each encoding to array item 1`] = `
Object {
  "encodings": Array [
    Object {
      "allowReserved": true,
      "contentType": "text/plain",
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
    Object {
      "allowReserved": true,
      "contentType": "text/plain",
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc2",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "key": "example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
  },
}
`;

exports[`translateMediaTypeObject given multiple examples should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "key": "example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
  },
}
`;

exports[`translateMediaTypeObject given single example should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "key": "default",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
  },
}
`;
